examples/modules/expected/0764-modules-import-generic-head-non-transitive.stderr
error: type 'Box' is not visible; #import the module that declares it
  --> examples/modules/0764-modules-import-generic-head-non-transitive.sx:21:9
   |
21 |     x : Box(i64) = .{ v = 3 };
   |         ^^^^^^^^
